--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
-Lower number=higher priority
+Smaller number=higher priority
 
 1. Shop menu
-2. Random shop position
-3. Boat logic
-4. End screen (aka video/text after game passed)
-5. Implement music fade in/out
+2. Boat logic
+3. End screen (aka video/text after game passed)
+4. Implement music fade in/out
