--- a/TODO
+++ b/TODO
@@ -3,4 +3,5 @@ Smaller number=higher priority
 1. Shop menu
 2. Boat logic
 3. End screen (aka video/text after game passed)
-4. Implement music fade in/out
+4. Add cloud
+5. Implement music fade in/out
