--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 Smaller number=higher priority
 
 1. Add cloud
-2. Boat logic
-3. Implement music fade in/out
+2. Add controller support
+3. Boat logic
+4. Implement music fade in/out
